state machine for removing